# gbpunk

./: .gitignore  README.md  gbcamera-sram.txt  gbpunk.kicad_pcb  gbpunk.kicad_pro
gerbers-gbpunk/: bom.csv
gerbers-gbpunk/gerber/: gbpunk-CmtUser.gbr  gbpunk-CuTop.gtl  gbpunk-EdgeCuts.gm1  gbpunk-PasteTop.gtp  gbpunk-SilkBottom.gbo  gbpunk-SilkTop.gto  gbpunk.drl
hardware/flashcart/flashcart/: flashcart.kicad_pcb  flashcart.kicad_prl  flashcart.kicad_pro  flashcart.kicad_sch  flashcart.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
hardware/gbpunk/: #auto_saved_files#  _autosave-gbpunk.kicad_pcb  fp-info-cache  fp-lib-table  gbpunk-cache.lib  gbpunk.bak  gbpunk.kicad_pcb  gbpunk.kicad_prl  gbpunk.kicad_pro  gbpunk.kicad_sch  gbpunk.kicad_sch-bak  gbpunk.kicad_sym  gbpunk.sch  gbpunk.sch-bak  sym-lib-table
hardware/gbpunk/gbpunk.pretty/: SSD1306.kicad_mod  SW_DPDT_CK_JS202011JCQN.kicad_mod  cart.kicad_mod  gbpunk_aliexpress_gb_connector.kicad_mod  logo.kicad_mod  logo.kicad_sym  sussy.kicad_mod
hardware/gbpunk/gerbers-gbpunk-v1/: pos.csv
hardware/gbpunk/gerbers-gbpunk-v2/: bom.csv  gbpunk-top-pos.csv
hardware/gbpunk/jlcpcb/: project.db
hardware/interposer/: fp-info-cache  fp-lib-table  interposer.kicad_pcb  interposer.kicad_prl  interposer.kicad_pro  interposer.kicad_sch
hardware/interposer/gerber/: interposer-B_Cu.gbl  interposer-B_Mask.gbs  interposer-B_Paste.gbp  interposer-B_Silkscreen.gbo  interposer-Edge_Cuts.gm1  interposer-F_Cu.gtl  interposer-F_Mask.gts  interposer-F_Paste.gtp  interposer-F_Silkscreen.gto  interposer-NPTH-drl_map.gbr  interposer-NPTH.drl  interposer-PTH-drl_map.gbr  interposer-PTH.drl
hardware/tht_gb_adapter/: fp-info-cache  fp-lib-table  tht_gb_adapter.kicad_pcb  tht_gb_adapter.kicad_prl  tht_gb_adapter.kicad_pro  tht_gb_adapter.kicad_sch
hardware/tht_gb_adapter/jlcpcb/: project.db
logic2-caps/: boot_ctrl_signals.sal  boot_read_signals.sal  cam_write_signal.sal  cart_access_signals.sal
software/: CMakeLists.txt  cart.c  cart.h  gb.c  gb.h  gba.c  gba.h  gbbus.pio  gbcam.c  gbcam.h  gbcam_ex.c  main.c  mbc1.c  mbc1.h  mbc2.c  mbc2.h  mbc3.c  mbc3.h  mbc5.c  mbc5.h  msc_disk.c  msc_disk.h  pins.h  rom_only.c  rom_only.h  scratch.c  scratch.h  status_led.c  status_led.h  tetris.h  unit_tests.c  unit_tests.h  utils.c  utils.h
software/disk/: gb_disk.c  gb_disk.h  msc_disk.c  usb_descriptors.c
software/mappers/: gbcam.c  gbcam.h  huc1.c  huc1.h  mbc1.c  mbc1.h  mbc2.c  mbc2.h  mbc3.c  mbc5.c  mbc5.h  no_mapper.c  no_mapper.h  rom_only.c
utils/: all_games.csv  bin2bmp.c  gbcam_sram.outs  main.c  txt2bin.py  txt2bmp.py
utils/data/: eu_games.csv  japan_games.csv  proto-unlisc.csv  revisions.csv  usa_games.csv
utils/gbcater/: cartridge.py  main.py
(+43 files in other folders)
